--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1765,7 +1765,7 @@ label {
   position: absolute;
   width: 100%;
   height: 700px;
-  background: url("/assets/img/banner.png");
+  background: url("assets/img/banner.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
