--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1765,7 +1765,7 @@ label {
   position: absolute;
   width: 100%;
   height: 700px;
-  background: url("assets/img/banner.png");
+  background: url("../img/banner.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -1778,7 +1778,7 @@ label {
   transform: translateX(-50%);
   width: 600px;
   height: 200px;
-  background: url("assets/img/logo-2.png");
+  background: url("../img/logo-2.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -3044,7 +3044,7 @@ label {
 
 .counter-area {
   position: relative;
-  background-image: url(../img/shape/02.png);
+  background-image: url("../img/shape/02.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -3761,7 +3761,7 @@ label {
 
 .quote-area {
   position: relative;
-  background-image: url(../img/quote/01.jpg);
+  background-image: url("../img/quote/01.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -5103,7 +5103,7 @@ label {
   bottom: 0;
   width: 100%;
   height: 100%;
-  background-image: url(../img/shape/04.png);
+  background-image: url("../img/shape/04.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
