--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1761,6 +1761,16 @@ label {
   top: 0;
 }
 
+.hero-img {
+  /* position: absolute; */
+  width: 100%;
+  height: 700px;
+  object-fit: cover;
+  object-position: 15%;
+  z-index: 10;
+  top: 0;
+}
+
 .hero-globe {
   position: absolute;
   width: 100%;
@@ -1781,6 +1791,13 @@ label {
   background: url("../img/logo-2.png");
   background-size: contain;
   background-repeat: no-repeat;
+}
+
+@media (max-width: 600px) {
+  .hero-logo{
+    width: 80%;
+    margin: 0 auto;
+  }
 }
 
 .hero-single {
